<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.DetailsFragment">

    <ImageView
        android:id="@+id/details_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/about_university"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="20sp"
                    android:textColor="@color/Black"
                    android:fontFamily="@font/questv_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/details_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/questv_regular"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_university" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/details_website"
                android:text="@string/website"
                style="@style/InfoButtonStyle"
                android:background="@drawable/website_button_design"/>

            <Button
                android:id="@+id/details_college"
                android:text="@string/college"
                style="@style/InfoButtonStyle"
                android:background="@drawable/college_button_design" />

            <Button
                android:id="@+id/details_rss"
                android:text="@string/news"
                style="@style/InfoButtonStyle"
                android:background="@drawable/news_button_design" />

            <Button
                android:id="@+id/details_application"
                android:text="@string/Application"
                style="@style/InfoButtonStyle"
                android:background="@drawable/application_button_design" />

            <Button
                android:id="@+id/details_location"
                android:text="@string/location"
                style="@style/InfoButtonStyle"
                android:background="@drawable/location_button_design"/>

            <LinearLayout
                android:id="@+id/details_communication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/communication_button_design"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/communication"
                    android:textColor="@color/Beige"
                    android:gravity="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/questv_regular"
                    app:layout_constraintStart_toStartOf="parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/details_instagram"
                        style="@style/SocialMediaImageStyle"
                        android:src="@drawable/instagram_logo"
                        app:civ_circle_background_color="@color/Instagram" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/details_twitter"
                        style="@style/SocialMediaImageStyle"
                        android:src="@drawable/twitter_logo"
                        app:civ_circle_background_color="@color/Twitter" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/details_youtube"
                        style="@style/SocialMediaImageStyle"
                        android:src="@drawable/youtube_logo"
                        app:civ_circle_background_color="@color/Youtube" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/details_facebook"
                        style="@style/SocialMediaImageStyle"
                        android:src="@drawable/facebook_logo"
                        app:civ_circle_background_color="@color/Facebook" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/details_snapchat"
                        style="@style/SocialMediaImageStyle"
                        android:src="@drawable/snapchat_logo"
                        app:civ_circle_background_color="@color/Snapchat" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>